.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Apex_Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Feature__c</fullName>
        <label>Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Filter__c</fullName>
        <label>Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Snapshot has been created successfully</description>
        <inlineHelpText>Checked if Snapshot has been created successfully</inlineHelpText>
        <label>Is Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__JS_Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JS Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Modified_In_Days__c</fullName>
        <label>Last Modified In Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Link__c</fullName>
        <formula>IF( AND(Flosum__isExtensible__c, NOT(Flosum__from_Git__c)), HYPERLINK(&apos;/apex/&apos;+$Setup.Flosum__Credentials__c.Flosum__Namespace__c+&apos;SnapshotToGitCommit?sid=&apos;+ Id , IMAGE(&apos;/resource/icons/button2.png&apos;,&apos;Click to create new Snapshot&apos;,24,95)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Repository</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Apex_Classes__c</fullName>
        <label>No. of Apex Classes</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ApexClass</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Apex_Pages__c</fullName>
        <label>No. of Apex Pages</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ApexPage</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Apex_Triggers__c</fullName>
        <label>No. of Apex Triggers</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ApexTrigger</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Custom_Labels__c</fullName>
        <label>No. of Custom Labels</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CustomLabel</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Custom_Objects__c</fullName>
        <label>No. of Custom Objects</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CustomObject</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Groups__c</fullName>
        <label>No. of Groups</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Group</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Metadata_Items__c</fullName>
        <label>No. of Metadata Items</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Profile_ApexClass,Profile_ApexPage,Profile_CustomObject,Profile_Layout,Profile_Other_Permissions,PermissionSet_ApexClass,PermissionSet_ApexPage,PermissionSet_CustomObject,PermissionSet_Layout,PermissionSet_Other_Permissions</value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Record_Types__c</fullName>
        <label>No. of Record Types</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>RecordType</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Reports__c</fullName>
        <label>No. of Reports</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Report</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__No_of_Workflow_Rules__c</fullName>
        <label>No. of Workflow Rules</label>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>WorkflowRule</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Flosum__Metadata_Item__c.Flosum__Attachment_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Flosum__Metadata_Item__c.Flosum__Snapshot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flosum__Organisation__c</fullName>
        <label>Organization</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Snapshots</relationshipLabel>
        <relationshipName>Snapshot</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Other_Metadata_Items__c</fullName>
        <formula>Flosum__No_of_Metadata_Items__c - ( Flosum__No_of_Apex_Classes__c +  Flosum__No_of_Apex_Pages__c +  Flosum__No_of_Apex_Triggers__c +  Flosum__No_of_Custom_Labels__c + Flosum__No_of_Custom_Objects__c +  Flosum__No_of_Record_Types__c +  Flosum__No_of_Reports__c +  Flosum__No_of_Workflow_Rules__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Metadata Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Total_Patch_Items__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Items Referenced In Deployments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__from_Git__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Git</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__isExtensible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExtensible</label>
        <type>Checkbox</type>
    </fields>
    <label>Snapshot</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>